--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -4,6 +4,7 @@
 
 /* Definition of the design system. All colors, gradients, fonts, etc should be defined here.
 All colors MUST be HSL.
+Version: 2025-11-05 - Bloomberg-style dark/light theme
 */
 
 @layer base {
